--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,6 +31,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* border-bottom: 1px solid red; */
 }
 
 html {
@@ -43,6 +44,7 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
+  /* min-height: 100%; */
 }
 
 a {
